Updated to read leaderboard key from database, which is unique for each game

--- a/php/scores/DisplayScores.html
+++ b/php/scores/DisplayScores.html
@@ -3,14 +3,15 @@
 <html>
 <head>
 
+ 
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="-1">
 
   <style>
     body {
-      font-family: Sans-Serif;
+      font-family: "Share Tech", Sans-Serif;
       font-size: 10pt;
-      background-image: url("*******************************************************************.jpg");
+      background-image: url("https://*****************.jpg");
       background-repeat: no-repeat;
       background-color: #15c117;
       background-size: cover;
@@ -121,7 +122,7 @@
 
 <p id="game_display"></p>
 <div class="back">
-<a href="https://example.com">Back to ************* Games</a>
+<a href="https://*******">Back to *****</a>
 </div>
 
 
@@ -178,7 +179,7 @@ xmlhttp.onreadystatechange = function() {
 	document.getElementById("game_display").innerHTML = "Loading";
 
 
-xmlhttp.open("GET", "https://example.com/scores/leaderboard.json", true);
+xmlhttp.open("GET", "https://********.com/scores/leaderboard.json", true);
 xmlhttp.send();
 
 
