Moved bad words into a separate file, which is read by the no_naughty method

--- a/php/scores/DisplayScores.html
+++ b/php/scores/DisplayScores.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 
+
  
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="-1">
@@ -11,7 +12,7 @@
     body {
       font-family: "Share Tech", Sans-Serif;
       font-size: 10pt;
-      background-image: url("https://*****************.jpg");
+      background-image: url("https://example.com/website_bkg3.jpg");
       background-repeat: no-repeat;
       background-color: #15c117;
       background-size: cover;
@@ -122,7 +123,7 @@
 
 <p id="game_display"></p>
 <div class="back">
-<a href="https://*******">Back to *****</a>
+<a href="https://example.com">Back</a>
 </div>
 
 
@@ -179,7 +180,7 @@ xmlhttp.onreadystatechange = function() {
 	document.getElementById("game_display").innerHTML = "Loading";
 
 
-xmlhttp.open("GET", "https://********.com/scores/leaderboard.json", true);
+xmlhttp.open("GET", "https://example.com/scores/leaderboard.json", true);
 xmlhttp.send();
 
 
